# W2M_Microservice/rest/src/main/java/com/w2m/service/rest/controller/SpacecraftRestController.java
@@ -7,8 +7,8 @@ import org.springframework.http.HttpStatusCode;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
-import com.W2M.service.rest.interfaces.product.dto.SpacecraftRest;
-import com.dekra.service.rest.interfaces.product.dto.ProductRest;
+import com.W2M.service.rest.interfaces.spacecraft.NavesApi;
+import com.W2M.service.rest.interfaces.spacecraft.dto.SpaceCraftRest;
 import com.w2m.service.rest.controller.response.mapper.SpacecraftRestMapper;
 import com.w2m.service.use_case.CreateSpacecraft;
 import com.w2m.service.use_case.DeleteSpacecraft;
@@ -16,7 +16,8 @@ import com.w2m.service.use_case.SearchSpacecraft;
 import com.w2m.service.use_case.UpdateSpacecraft;
 
 @RestController
-public class SpacecraftRestController implements Spacecraft {
+
+public class SpacecraftRestController implements NavesApi {
 	private final SearchSpacecraft searchSpacecraft;
 	private final CreateSpacecraft createSpacecraft;
 	private final DeleteSpacecraft deleteSpacecraft;
@@ -35,40 +36,41 @@ public class SpacecraftRestController implements Spacecraft {
 	}
 
 	@Override
-	public ResponseEntity<List<SpacecraftRest>> listSpacecrafts() {
+	public ResponseEntity<List<SpaceCraftRest>> listSpaceCrafts() {
 		return ResponseEntity.ok(this.mapper.mapTo(this.searchSpacecraft.searchAllSpacecraft()));
 	}
 
 	@Override
-	public ResponseEntity<ProductRest> findProductById(Long id) {
+	public ResponseEntity<Void> createSpaceCraft(SpaceCraftRest spacecraftRest) {
+		Objects.nonNull(spacecraftRest);
+		this.createSpacecraft.createSpacecraft(this.mapper.mapReverse(spacecraftRest));
+		return ResponseEntity.status(HttpStatusCode.valueOf(201)).build();
+	}
+
+	@Override
+	public ResponseEntity<SpaceCraftRest> findSpaceCraftById(Long id) {
 		Objects.nonNull(id);
 		return ResponseEntity.ok(this.mapper.mapTo(this.searchSpacecraft.searchSpacecraftById(id)));
 	}
 
 	@Override
-	public ResponseEntity<Void> createProduct(ProductRest productRest) {
-		Objects.nonNull(productRest);
-		this.createSpacecraft.createSpacecraft(this.mapper.mapReverse(SpacecraftRest));
-		return ResponseEntity.status(HttpStatusCode.valueOf(201)).build();
-	}
-
-	@Override
-	public ResponseEntity<Void> deleteSpacecraftById(Long id) {
+	public ResponseEntity<Void> deleteSpaceCraftById(Long id) {
 		Objects.nonNull(id);
 		this.deleteSpacecraft.deleteSpacecraft(id);
 		return ResponseEntity.status(HttpStatusCode.valueOf(202)).build();
 	}
 
 	@Override
-	public ResponseEntity<Void> updateSpacecraft(Long id, SpacecraftRest spacecraftRest) {
+	public ResponseEntity<Void> updateSpaceCraft(Long id, SpaceCraftRest spacecraftRest) {
 		Objects.nonNull(id);
-		Objects.nonNull(SpacecraftRest);
+		Objects.nonNull(spacecraftRest);
 		this.updateSpacecraft.updateSpacecraft(this.mapper.mapReverse(spacecraftRest));
 		return ResponseEntity.status(HttpStatusCode.valueOf(201)).build();
 	}
 
 	@Override
-	public ResponseEntity<List<SpacecraftRest>> listSpacecraftsByFilter(String name, String description, Double price) {
-		return ResponseEntity.ok(this.mapper.mapTo(this.searchSpacecraft.searchSpacecraftByFilter(name, description, price)));
+	public ResponseEntity<List<SpaceCraftRest>> listSpaceCraftsByFilter(String name) {
+		return ResponseEntity.ok(this.mapper.mapTo(this.searchSpacecraft.searchSpacecraftByFilter(name)));
 	}
+
 }
